# crdb

./: .envrc  .gitignore  Cargo.toml  Justfile  README.md  rust-toolchain.toml  shell.nix
.clusterfuzzlite/: Dockerfile  build.sh
.config/: nextest.toml
.github/: dependabot.yml
.sqlx/: query-02ce444f4eb9b8984e2b8c25baf40a686586723784a247086149d9dd1a33c29f.json  query-06fc7606a80712f26527ee0025dcebfad0840a5cf51794b5858ff32a96135182.json  query-0b98fdad907578a5bc09ad0ebf1ad5a0c48ce9ecc23bfdf0f3d38051e01e0337.json  query-0c3c2addd12313787183f5cab8a6381b213ec1077f0524503527e2e4a19e982b.json  query-133b63e16fefb543f5d981ed3f7d9b0e81a324073e1ab6e4938f59d8d874fcca.json  query-21e7e22e65c6b6ab1653aab74d3fe35c0eeff3bb1a11166d466a714a00ac305a.json  query-2c5ae4750ed16b828defe11359e4513ca1c1d65395b5bed1aa8cdf1d1d3f1452.json  query-2e23f64ec206634703ff92f35c40102602acea6de936aa55c61db2dc8bbce080.json  query-305e833bac8a16e2622bb937ab3134c799af41733b5daa19611b2cc1e70691df.json  query-3c48bcabb951e86b2fc6987e55f4ff716b8c6e559ea15c8514433ff059ea3e15.json  query-40b02e36d1f949305c1fbddf877bae6d4e6eaeadc9b09e67b7f537121f9aa5fa.json  query-49c8b33be9b6ae89dfd47474aa14aa80cee3b6c4d446c8a0a39b71c9d84feb83.json  query-4e1697c955837c6e55d95749b54cd5d65ef04ff6bc720d8be8dcf2d5ec9b787c.json  (+23 more)
crates/crdb-cache/: Cargo.toml
crates/crdb-cache/src/: binaries_cache.rs  cache_db.rs  lib.rs  object_cache.rs
crates/crdb-client/: Cargo.toml
crates/crdb-client/src/: api_db.rs  client_db.rs  connection.rs  lib.rs
crates/crdb-helpers/: Cargo.toml
crates/crdb-postgres/: Cargo.toml
crates/crdb-postgres/.sqlx/: query-09732a9f685af667a1aeef95d955eda3ef21d5834e6ad0d31731eb098012abdb.json  query-0a61088c3900fb0c5f9a68f9cc283fc78399ed2ddf0050c674a4133690ed4a8c.json  query-1d353fddf2de96ae629437f8a3bb4bbbf45cbe753bb619562ae313a85ebe109c.json  query-3a68bce37f20ee80237933149ee8ced00cb0086b5f1320f5b1329e1e183f0a66.json  query-3e504087ee302f2b798651595f170fc2010271f22b5d7ab2cfbc688653dda530.json  query-4843e12b2324a1d5c1b7aca5a8e66ec1bfcc33804e6921cc4f23aa077b5030f4.json  query-4965d12b4c6ea2f57805831bd39d74b19812317285b69db3dc45e87d02fda8ad.json  query-4c0010ca62ca0b2bbcfc9e306c72bebd98714a7f9b7c6a658c5147abc858742a.json  query-6c1498933765cd347865bcd29f6897d649332d516be9c18b3f7e022fb841df81.json  query-7772161596cb2e39c56ec59603605c81a84a6104b549809a9e6d0bb14893baec.json  query-a67cbe183793de0cebcbe3fdbb6b98ba9b521b6f443f89522f82261e87170f05.json  query-aa0c92e20de703b89e107f2fe5f343f4afc987cbadc37b2e985f7a1ec74723eb.json  query-b7dc7b39144d2ba6d0dec7f346c93352b7096f39e2f603dcbace27d15d2e343e.json  query-c3bb68c45234396faa85e2b57dba23ef39175b0c80c2ddc3ab62f6a150f16790.json  query-c4109139fc16e973fefcbce9511b937dcf2b32e27016e4effa5b3116c451606c.json  query-f43aa0fdfdbe700ca38bdf95f28e62f4a003f3ffa1172e19413e7507843cd624.json  query-f8d0a9017033a058042a36c8163736974b6427e6288ca18c8744ff1a73345bc3.json
crates/crdb-postgres/src/: lib.rs
crates/crdb-postgres/src/tests/: fuzz_two_threads.rs
crates/crdb-sqlite/: Cargo.toml
crates/crdb-sqlite/migrations/: 20231230000000_base-db.sql
crates/crdb-test-utils/: Cargo.toml
crates/crdb-test-utils/src/: full_object.rs  fuzz_remote_perms.rs  lib.rs  mem_db.rs  object_delegate_perms.rs  object_full.rs  object_perms.rs  object_simple.rs  smoke_test.rs
crdb/: Cargo.toml
crdb-client/: Cargo.toml
crdb-client/src/: api_db.rs  client_db.rs  connection.rs  lib.rs  obj.rs
crdb-core/: Cargo.toml
crdb-core/src/: check_string.rs  client_side_db.rs  config.rs  db.rs  db_trait.rs  dyn_sized.rs  error.rs  fts.rs  future.rs  ids.rs  importance.rs  lib.rs  lock.rs  login_info.rs  messages.rs  object.rs  query.rs  server_side_db.rs  session.rs
crdb-helpers/: Cargo.toml
crdb-helpers/src/: lib.rs
crdb-indexed-db/: Cargo.toml
crdb-indexed-db/src/: lib.rs
crdb-indexed-db/tests/: client-js.rs
crdb-macros/: Cargo.toml
crdb-macros/src/: lib.rs
crdb-postgres/: Cargo.toml
crdb-postgres/src/: lib.rs  tests.rs
crdb-postgres/src/tests/: fuzz_sessions.rs  fuzz_two_threads.rs
crdb-server/: Cargo.toml
crdb-server/src/: lib.rs  tests.rs
crdb-sqlite/: Cargo.toml
crdb-sqlite/src/: lib.rs  tests.rs
crdb-test-utils/: Cargo.toml
crdb-test-utils/src/: fuzz_object_full.rs  fuzz_remote_perms.rs  fuzz_simple.rs  lib.rs  mem_db.rs  object_delegate_perms.rs  object_full.rs  object_perms.rs  object_simple.rs  smoke_test.rs  stubs.rs
crdb-test-utils/src/full_object/: tests.rs
crdb/src/: api.rs  client.rs  dbptr.rs  error.rs  importance.rs  lib.rs  messages.rs  query.rs  server.rs  session.rs  test_utils.rs  timestamp.rs
crdb/src/cache/: cache_db.rs  object_cache.rs
crdb/src/client/: api_db.rs  client_db.rs  config.rs  connection.rs  indexed_db.rs  obj.rs  sqlite_db.rs
crdb/src/client/connection/: native.rs  wasm.rs
crdb/src/client/sqlite_db/: tests.rs
crdb/src/server/: config.rs  postgres_db.rs
crdb/src/server/migrations/: 20231230000000_base-db.sql
crdb/src/server/postgres_db/: tests.rs
crdb/src/server/postgres_db/tests/: fuzz_battle_royale.rs  fuzz_sessions.rs  fuzz_two_threads.rs
crdb/src/test_utils/: full_object.rs  fuzz_object_full.rs  fuzz_remote_perms.rs  fuzz_simple.rs  mem_db.rs  object_full.rs  object_perms.rs  object_simple.rs  smoke_test.rs
crdb/tests/: client-js.rs
examples/basic/: Cargo.toml
examples/basic/api/: Cargo.toml
examples/basic/api/src/: lib.rs
examples/basic/client/: Cargo.toml
examples/basic/client-js/: Cargo.toml  Trunk.toml  panic-page.html
examples/basic/client-js/src/: main.rs  use_async.rs
examples/basic/client-native/: Cargo.toml
examples/basic/crates/api/: Cargo.toml
examples/basic/crates/api/src/: lib.rs
examples/basic/crates/client-js/: Cargo.toml  index.html
examples/basic/crates/client-js/src/: main.rs
examples/basic/crates/client-native/: Cargo.toml
examples/basic/crates/server/: Cargo.toml
examples/basic/crates/server/src/: main.rs
examples/basic/server/: Cargo.toml
examples/basic/server/src/: main.rs
get-all-docs/: Cargo.toml
get-all-docs/src/: lib.rs
nix/: sources.json
(+134 files in other folders)
