[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["Leo Gaspard <leo@casmic.fr>"]
categories = [
    "asynchronous",
    "database-implementations",
    "database",
    "web-programming",
    "wasm",
]
description = "Concurrently Replicated DataBase"
edition = "2021"
homepage = "https://github.com/Ekleog/crdb" # TODO(doc-med): actually make a website
keywords = ["database", "framework", "async", "web", "native"]
license = "AGPL-3.0-or-later"
readme = "./README.md"
repository = "https://github.com/Ekleog/crdb"
# Remember to update the ci.yml file when updating this
rust-version = "1.81.0" # TODO(api-highest): this is actually 1.85.0 due to the async-closure feature

[workspace.dependencies]
crdb = { path = "./crates/crdb", version = "0.0.1-alpha.0" }
crdb-cache = { path = "./crates/crdb-cache", version = "0.0.1-alpha.0" }
crdb-client = { path = "./crates/crdb-client", version = "0.0.1-alpha.0" }
crdb-core = { path = "./crates/crdb-core", version = "0.0.1-alpha.0" }
crdb-helpers = { path = "./crates/crdb-helpers", version = "0.0.1-alpha.0" }
crdb-indexed-db = { path = "./crates/crdb-indexed-db", version = "0.0.1-alpha.0" }
crdb-macros = { path = "./crates/crdb-macros", version = "0.0.1-alpha.0" }
crdb-postgres = { path = "./crates/crdb-postgres", version = "0.0.1-alpha.0" }
crdb-server = { path = "./crates/crdb-server", version = "0.0.1-alpha.0" }
crdb-sqlite = { path = "./crates/crdb-sqlite", version = "0.0.1-alpha.0" }
crdb-test-utils = { path = "./crates/crdb-test-utils", version = "0.0.1-alpha.0" }

anyhow = "1.0"
arbitrary = { version = "1.3", features = ["derive"] }
arbitrary-json = "=0.1.1" # very small crate, can we actually trust updates?
async-stream = "0.3.5"
axum = { version = "0.8.1", features = ["ws"] }
axum-test = { version = "17.0", features = ["ws"] }
bitflags = { version = "2.4", features = ["serde"] }
bolero = { version = "0.12.0", features = ["arbitrary"] }
bytes = "1.9"
chrono = "0.4.31"
console_error_panic_hook = "0.1.7"
cron = "0.15.0"
deepsize = "0.2.0"
educe = "0.6.0"
futures = "0.3.29"
getrandom-0-2 = { package = "getrandom", version = "0.2.11" } # TODO(blocked): kill this and overrides once all deps are gone
getrandom = { version = "0.3.1", features = [
    "wasm_js", # Required on wasm32 and noop elsewhere
] }
gloo-net = "0.6.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
icu_casemap = "1.4"
icu_normalizer = "1.4"
icu_properties = "1.4"
icu_segmenter = "1.4"
indexed-db = "0.4.2"
js-sys = "0.3.67"
lockable = "0.1.1"
paste = "1.0"
rand = "0.9.0"
rand-0-8 = { package = "rand", version = "0.8.5" } # TODO(blocked): kill once bolero is up-to-date
reord = "0.2.3"
rust_decimal = { version = "1.33", features = ["serde-arbitrary-precision"] }
rust-stemmers = "1.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde-wasm-bindgen = "0.6.3"
sha3 = "0.10.8"
sqlx = { version = "0.8.2", features = ["runtime-tokio"] }
thiserror = "2.0"
tempfile = "3.9"
tokio = { version = "1.35", features = ["macros", "rt", "sync"] }
tokio-tungstenite = "0.26.1"
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.1"
ulid = { version = "1.1.1", features = [ # 1.1.1 required for wasm support
    "serde",
] }
uuid = "1.6"
waaaa = "0.1.0"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.39"
wasm-bindgen-test = "0.3.39"
web-time = { version = "1.1.0", features = ["serde"] }
web-sys = { version = "0.3.66", features = [
    "console",
    "DomException",
    "Event",
    "Navigator",
    "StorageManager",
    "Window",
] }
writeable = "0.5.4"

[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1
