[package]
name = "crdb-client"
version = "0.1.0"
edition = "2021"

[dependencies]
crdb-cache.workspace = true
crdb-core.workspace = true
crdb-helpers.workspace = true

anyhow.workspace = true
async-stream.workspace = true
educe.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
ulid.workspace = true
web-time.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crdb-sqlite.workspace = true

tokio-tungstenite.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
crdb-indexed-db.workspace = true

gloo-net.workspace = true
