[package]
name = "crdb-client"
version = "0.1.0"
edition = "2021"

[dependencies]
crdb-cache.workspace = true
crdb-core.workspace = true

anyhow.workspace = true
async-stream.workspace = true
educe.workspace = true
futures.workspace = true
getrandom.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
ulid.workspace = true
waaaa.workspace = true
web-time.workspace = true
