[package]
name = "crdb-core"
version = "0.1.0"
edition = "2021"

[features]
arbitrary = ["dep:arbitrary", "arbitrary-json", "rust_decimal/rust-fuzz"]
indexed-db = ["dep:indexed-db", "serde-wasm-bindgen", "web-sys"]
server = ["axum", "rand", "sqlx-postgres"]
sqlx-postgres = ["sqlx", "sqlx/postgres", "sqlx/uuid", "uuid"]
sqlx-sqlite = ["sqlx", "sqlx/sqlite", "sqlx/uuid", "uuid"]
uuid = ["dep:uuid"]

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
deepsize.workspace = true
educe.workspace = true
icu_casemap.workspace = true
icu_normalizer.workspace = true
icu_properties.workspace = true
icu_segmenter.workspace = true
rust_decimal.workspace = true
rust-stemmers.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true
tracing.workspace = true
ulid.workspace = true
waaaa.workspace = true
web-time.workspace = true
writeable.workspace = true

arbitrary = { workspace = true, optional = true }
arbitrary-json = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
indexed-db = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers.workspace = true
wasm-bindgen-futures.workspace = true

[dev-dependencies]
bolero.workspace = true
getrandom = { workspace = true, features = ["js"] }
