[package]
name = "crdb-helpers"
version = "0.0.1"
edition = "2021"

[features]
js = ["crdb-core/indexed-db", "serde-wasm-bindgen", "wasm-bindgen"]

[dependencies]
crdb-core.workspace = true

anyhow.workspace = true
serde_json.workspace = true

serde-wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
