[package]
name = "crdb-indexed-db"
version = "0.1.0"
edition = "2021"

[features]
_tests = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
crdb-core = { workspace = true, features = ["indexed-db"] }
crdb-helpers = { workspace = true, features = ["js"] }

anyhow.workspace = true
futures.workspace = true
indexed-db.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
tracing.workspace = true
web-sys.workspace = true
