[package]
name = "crdb-indexed-db"
version = "0.0.1"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
_tests = [
    "arbitrary",
    "bolero",
    "console_error_panic_hook",
    "crdb-test-utils",
    "getrandom",
    "getrandom-0-2/js",
    "rand",
    "rand-0-8",
    "tracing-wasm",
    "wasm-bindgen-test",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
crdb-core = { workspace = true, features = ["indexed-db"] }
crdb-helpers = { workspace = true, features = ["js"] }

anyhow.workspace = true
futures.workspace = true
indexed-db.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
tracing.workspace = true
web-sys.workspace = true

# Dev-dependencies, enabled with the `_tests` feature
crdb-test-utils = { workspace = true, optional = true }

arbitrary = { workspace = true, optional = true }
bolero = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }
getrandom-0-2 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rand-0-8 = { workspace = true, optional = true }
tracing-wasm = { workspace = true, optional = true }
wasm-bindgen-test = { workspace = true, optional = true }
