[package]
name = "crdb-server"
version = "0.0.1"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
crdb-cache.workspace = true
crdb-core.workspace = true
crdb-postgres.workspace = true

anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
cron.workspace = true
futures.workspace = true
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
ulid.workspace = true

[dev-dependencies]
crdb-test-utils.workspace = true

axum-test.workspace = true
