[package]
name = "crdb-test-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
crdb-core = { workspace = true, features = ["arbitrary"] }
crdb-macros.workspace = true

anyhow.workspace = true
arbitrary.workspace = true
deepsize.workspace = true
educe.workspace = true
futures.workspace = true
getrandom.workspace = true
paste.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
ulid.workspace = true
waaaa.workspace = true

[dev-dependencies]
getrandom-0-2 = { workspace = true, features = ["js"] }
