[package]
name = "crdb"
version = "0.1.0"
edition = "2021"
license = "AGPL3"

[package.metadata.docs.rs]
all-features = true

[features]
client = ["crdb-client"]
indexed-db = ["crdb-indexed-db"]
server = ["crdb-server"]
# TODO(sqlite-med): add this feature and relevant in lib.rs: sqlite = ["crdb-sqlite"]

[dependencies]
crdb-core.workspace = true
crdb-macros.workspace = true

crdb-client = { workspace = true, optional = true }
crdb-indexed-db = { workspace = true, optional = true }
crdb-server = { workspace = true, optional = true }

[dev-dependencies]
getrandom-0-2 = { workspace = true, features = ["js"] }
