[package]
name = "crdb"
version = "0.0.1"
edition = "2021"
license = "AGPL3"

[package.metadata.docs.rs]
all-features = true

[features]
client = ["crdb-client"]
indexed-db = ["crdb-indexed-db"]
server = ["crdb-server"]
sqlite = ["crdb-sqlite"]

[dependencies]
crdb-core.workspace = true
crdb-macros.workspace = true

crdb-client = { workspace = true, optional = true }
crdb-indexed-db = { workspace = true, optional = true }
crdb-server = { workspace = true, optional = true }
crdb-sqlite = { workspace = true, optional = true }
