[package]
name = "crdb"
version = "0.0.1"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
client = ["crdb-client"]
indexed-db = ["crdb-indexed-db"]
server = ["crdb-server"]
sqlite = ["crdb-sqlite"]

[dependencies]
crdb-core.workspace = true
crdb-macros.workspace = true

crdb-client = { workspace = true, optional = true }
crdb-indexed-db = { workspace = true, optional = true }
crdb-server = { workspace = true, optional = true }
crdb-sqlite = { workspace = true, optional = true }
