[package]
name = "get-all-docs"
version = "0.1.0"
edition = "2021"
publish = false # Used only for `just doc` to generate *all* the documentation

[dependencies]
anyhow.workspace = true
arbitrary.workspace = true
arbitrary-json.workspace = true
async-stream.workspace = true
axum.workspace = true
bitflags.workspace = true
bolero.workspace = true
chrono.workspace = true
console_error_panic_hook.workspace = true
cron.workspace = true
deepsize.workspace = true
educe.workspace = true
futures.workspace = true
getrandom.workspace = true
gloo-net.workspace = true
gloo-timers.workspace = true
icu_casemap.workspace = true
icu_normalizer.workspace = true
icu_properties.workspace = true
icu_segmenter.workspace = true
indexed-db.workspace = true
js-sys.workspace = true
lockable.workspace = true
paste.workspace = true
rand.workspace = true
reord.workspace = true
rust_decimal.workspace = true
rust-stemmers.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
sha3.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-wasm.workspace = true
ulid.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen-test.workspace = true
web-time.workspace = true
web-sys.workspace = true
writeable.workspace = true
