[package]
name = "crdb-cache"
version = "0.0.1"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
crdb-core.workspace = true

anyhow.workspace = true
serde_json.workspace = true
waaaa.workspace = true
web-time.workspace = true

[dev-dependencies]
getrandom-0-2 = { workspace = true, features = ["js"] }
