[package]
name = "crdb-client"
version = "0.0.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
crdb-cache.workspace = true
crdb-core.workspace = true

anyhow.workspace = true
async-stream.workspace = true
educe.workspace = true
futures.workspace = true
getrandom.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
ulid.workspace = true
waaaa.workspace = true
web-time.workspace = true
