[package]
name = "crdb-helpers"
version = "0.0.1-alpha.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
js = ["crdb-core/indexed-db", "serde-wasm-bindgen", "wasm-bindgen"]

[dependencies]
crdb-core.workspace = true

anyhow.workspace = true
serde_json.workspace = true

serde-wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
