[package]
name = "crdb-postgres"
version = "0.0.1-alpha.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(fuzzing)"] }

[dependencies]
crdb-cache.workspace = true
crdb-core = { workspace = true, features = ["server"] }
crdb-helpers.workspace = true

anyhow.workspace = true
futures.workspace = true
getrandom.workspace = true
lockable.workspace = true
reord.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["rust_decimal", "uuid"] }
tokio.workspace = true
tracing.workspace = true
ulid.workspace = true
uuid.workspace = true
waaa.workspace = true
web-time.workspace = true

[dev-dependencies]
crdb-test-utils.workspace = true

arbitrary.workspace = true
bolero.workspace = true
reord = { workspace = true, features = ["test"] }
serde.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
