[package]
name = "crdb-sqlite"
version = "0.0.1-alpha.0"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
crdb-core = { workspace = true, features = ["sqlx-sqlite"] }

anyhow.workspace = true
getrandom.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["sqlite", "uuid"] }
ulid.workspace = true

[dev-dependencies]
crdb-test-utils.workspace = true
