[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
publish = false
version = "0.0.0"

[workspace.dependencies]
basic-api = { path = "./crates/api" }

crdb = { path = "../../crates/crdb", features = [
    "client",
    "indexed-db",
    "server",
] }

anyhow = "1.0"
axum = "0.8.1"
chrono = "0.4.34"
console_error_panic_hook = "0.1.7"
deepsize = "0.2.0"
futures = "0.3.30"
getrandom = { version = "0.3.1", features = ["wasm_js"] }
gloo-net = "0.5.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.1"
ulid = "1.1"
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen-futures = "0.4.39"
web-sys = "0.3.66"
web-time = "1.0"
