[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "../api" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crdb = { path = "../../..", features = ["client-native"] }

[target.wasm32-unknown-unknown.dependencies]
crdb = { path = "../../..", features = ["client-js"] }
