[package]
name = "basic-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.8.1"
basic-api = { path = "../api" }
crdb = { path = "../../../crdb", features = ["server"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
