[package]
name = "basic-client-js"
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
basic-api.workspace = true

crdb.workspace = true

chrono.workspace = true
console_error_panic_hook.workspace = true
futures.workspace = true
getrandom.workspace = true
gloo-net.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-wasm.workspace = true
ulid.workspace = true
yew.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
web-time.workspace = true
