[package]
name = "basic-server"
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
basic-api.workspace = true

crdb.workspace = true

anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
